<resources>
    <string name="app_name" translatable="false">Говорилло</string>
    <string name="open_drawer" translatable="false">Open drawer</string>
    <string name="close_drawer" translatable="false">Close drawer</string>
    <string name="nav_main">Main</string>
    <string name="nav_random_topic">Random topic</string>
    <string name="nav_own_text">Own text</string>
    <string name="nav_twister">Tongue twister</string>

    <string name="time_for_preparing">Time for preparing: %1$d sec</string>
    <string name="time_for_speech">Time for speech: %1$02d:%2$02d</string>
    <string name="speech_time">Time: %1$02d:%2$02d</string>
    <string name="auth_about">You need to sign in to use app</string>
    <string name="auth_with_social_network">You can sign in with Social network:</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_tel">Phone number</string>
    <string name="hint_password">Password</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="wrong_pass">Wrong password</string>
    <string name="error_while_reg">Error while registration</string>

    <string name="percent_template" translatable="false">%1$d %%</string>
    <string name="preparing_time_diff_template" translatable="false">Время подготовки %1$s</string>
    <string name="speech_time_diff_template" translatable="false">Время выступления %1$s</string>

    <string name="facebook_app_id" translatable="false">196084370958937</string>
    <string name="fb_login_protocol_scheme" translatable="false">7f11009ecf1126baa9d4e71df37e9efa</string>
    <string name="mixpanel_token" translatable="false">5c3fe12980d9a7c1736f393e360b84b6</string>

    <string name="hint_profile" translatable="false">Ваш профиль</string>
</resources>
