<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vsquad.projects.govorillo.ui.fragment.auth.AuthFragment">
    <LinearLayout
        android:id="@+id/ll_hints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/auth_about"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/auth_with_social_network" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingTop="24dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_sign_facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:padding="0dp"
            android:scaleType="fitCenter"/>
        <ImageButton
            android:id="@+id/btn_sign_vk"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/btn_vk"
            android:scaleType="fitCenter"
            android:padding="0dp"
            android:background="#00000000"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:id="@+id/textInput_email" >
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:id="@+id/textInput_pass">
            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"/>
    </LinearLayout>
</RelativeLayout>
